kubernetes/rate-limiting/ratelimit-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: ratelimit
  template:
    metadata:
      labels:
        app: ratelimit
    spec:
      containers:
        - name: ratelimit
          image: envoyproxy/ratelimit:latest
          args:
            - "--config-path=/data/ratelimit/config.yaml"
            - "--redis-url=redis:6379"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config
              mountPath: /data/ratelimit
      volumes:
        - name: config
          configMap:
            name: ratelimit-config
