kubernetes/rate-limiting/ratelimit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: istio-system
spec:
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
  selector:
    app: ratelimit
